# agimus_spacelab

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml  setup.cfg  test_installation.sh
.github/agents/: hpp-spacelab.agent.md  spacelab-dev.agent.md
config/: graspball_config.py
doc/: HPP-Manipulation: Complete Motion Plan.md  IMPROVEMENT_PLAN.md  Makefile  api.rst  comparison_corba_vs_pyhpp.md  comparison_corba_vs_pyhpp_md.rst  conf.py  corba_api_documentation.md  corba_api_documentation_md.rst  examples.rst  hpp_manipulation_complete_motion_plan.md  hpp_manipulation_complete_motion_plan_md.rst  improvement_plan_md.rst  index.rst  installation.rst  path-planners-comparison.md  pyhpp_api_documentation.md  pyhpp_api_documentation_md.rst  serve_md.py  usage.rst
docker/: Dockerfile  README.md  docker-compose.yml  docker_exec.sh  docker_install.sh  docker_python.sh  docker_test.sh  run_docker.sh
docs/: PATH_SAVE_LOAD_IMPLEMENTATION.md
docs/bugs/: hpp-manipulation-leaf-projection-bug.md  pyhpp-factory-locked-joint-bugs.md
feature/: GRAPH_METADATA_SOLUTION.md  GRASP_SEQUENCE_PLANNING.md  hpp_path_planner_optimization_analysis.md
script/config/: graspball_config.py  graspball_config.yaml  graspball_config_v2.py  spacelab_config.py  spacelab_config.yaml
script/examples/: assembly_example.py  dual_arm_example.py  pick_place_example.py  unified_api_example.py  visualization_example.py
script/graspball/: graspball_corba_example.py  graspball_inbox_corba_example.py  graspball_pyhpp_example.py  task_graspball_inbox.py  test_graspball_yaml.py
script/spacelab/: README.md  example_collaborative_assembly.py  example_visualize_frames.py  interactive_planning.py  spacelab_corba_example.py  spacelab_example.py  spacelab_grasp_corba_example.py  spacelab_pyhpp_example.py  spacelab_tools.py  task_display_states.py  task_grasp_frame_gripper.py  task_orchestration.py  test_full_sequence.py  test_pyhpp_planning.py  test_spacelab_yaml.py  visualize_frames.py  visualize_scene.py
script/templates/: README.md  task_config_template.py  task_template.py
src/agimus_spacelab/: __init__.py  planner.py  version.py
src/agimus_spacelab/backends/: __init__.py  base.py  corba.py  pyhpp.py
src/agimus_spacelab/cli/: __init__.py  config_loader.py  interactive_pickers.py
src/agimus_spacelab/config/: __init__.py  base_config.py  rules.py  spacelab_config.py  yaml_loader.py
src/agimus_spacelab/corba/: __init__.py  corba_manipulation.py
src/agimus_spacelab/core/: __init__.py
src/agimus_spacelab/logging/: __init__.py  log_loader.py  run_logger.py  schema.py  setup.py
src/agimus_spacelab/planning/: __init__.py  config.py  constraints.py  graph.py  grasp_state.py  path_io.py  planner.py  scene.py  sequential_graph_factory.py  sequential_grasp_filter.py
src/agimus_spacelab/pyhpp/: __init__.py  pyhpp_manipulation.py
src/agimus_spacelab/tasks/: __init__.py  base.py  bridge.py  grasp_sequence.py  orchestration.py
src/agimus_spacelab/utils/: __init__.py  config_utils.py  interactive.py  transforms.py
src/agimus_spacelab/visualization/: __init__.py  live_graph_viz.py  video_recorder.py  viz.py
tests/: __init__.py  test_corba.py  test_core.py  test_display_states.py  test_inner_planner_type.py  test_pyhpp.py  test_refactored_modules.py  test_run_logger.py  test_sequential_filter.py
