[metadata]
name = agimus-spacelab
version = 0.1.0
author = Thanh Nguyen
author_email = dvtnguyen@laas.fr
description = Agimus Spacelab - Manipulation Planning Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.laas.fr/agimus-project/agimus_spacelab
license = LGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Robotics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.19.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov
    black
    ruff
    sphinx
    sphinx-rtd-theme

[flake8]
exclude = cmake
max-line-length = 88
ignore = E226, E704, E24, E121, W504, E126, E123, W503, E203
